<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/onlineMiniaturesFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <TextView
                android:id="@+id/no_recipe_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_recipe"
                android:visibility="gone"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <SearchView
                android:id="@+id/searchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="@string/searchMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/filters"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:orientation="horizontal"
                android:visibility="gone"
                style="?android:buttonBarStyle"
                app:layout_constraintBottom_toTopOf="@+id/miniaturesOnlineList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchBar"
                android:weightSum="5">

                <Button
                    android:id="@+id/filter_recipe"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/Recipes"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.1"/>

                <Button
                    android:id="@+id/filter_users"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/users"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.1"/>

                <Button
                    android:id="@+id/filter_ingre"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/disabled"
                    android:text="@string/Ingredients"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:layout_weight="1.7"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.1"/>

                <Button
                    android:id="@+id/filter_rate"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/disabled"
                    android:text="@string/Rate"
                    android:visibility="visible"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/miniaturesOnlineList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filters">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
