...
            app:destination="@id/subscribersFragment" />
        <action
            android:id="@+id/action_favouritesFragment_to_onlineMiniaturesFragment"
            app:destination="@id/onlineMiniaturesFragment" />
        <action
            android:id="@+id/action_favouritesFragment_to_fullUsersFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/rateRecipeFragment"
        android:name="ch.epfl.polychef.fragments.RateRecipeFragment"
        android:label="fragment_rate_recipe"
...
        <action
            android:id="@+id/action_RateRecipeFragment_to_fullUsersFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/fullRecipeFragment"
        android:name="ch.epfl.polychef.fragments.FullRecipeFragment"
        android:label="FullRecipeFragment" >
        <action
            android:id="@+id/action_fullRecipeFragment_to_subscribersFragment"
            app:destination="@id/subscribersFragment" />
        <action
...
